omni/tests/goldens/types/undefined_ident_07.omni
let result7:int = missing7
